<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/container"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingBottom="@dimen/activity_vertical_margin"
	tools:context=".ui.login.LoginActivity">

	<EditText
		android:id="@+id/username"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="24dp"
		android:layout_marginTop="96dp"
		android:layout_marginEnd="24dp"
		android:hint="@string/prompt_email"
		android:inputType="textEmailAddress"
		android:selectAllOnFocus="true"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<EditText
		android:id="@+id/password"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="24dp"
		android:layout_marginTop="8dp"
		android:layout_marginEnd="24dp"
		android:hint="@string/prompt_password"
		android:imeActionLabel="@string/action_sign_in_short"
		android:imeOptions="actionDone"
		android:inputType="textPassword"
		android:selectAllOnFocus="true"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/username" />

	<Button
		android:id="@+id/login"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="start"
		android:layout_marginStart="48dp"
		android:layout_marginTop="16dp"
		android:layout_marginEnd="48dp"
		android:layout_marginBottom="64dp"
		android:enabled="false"
		android:text="@string/action_sign_in"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/password"
		app:layout_constraintVertical_bias="0.2" />

	<ProgressBar
		android:id="@+id/loading"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:layout_marginStart="32dp"
		android:layout_marginTop="64dp"
		android:layout_marginEnd="32dp"
		android:layout_marginBottom="64dp"
		android:visibility="gone"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="@+id/password"
		app:layout_constraintStart_toStartOf="@+id/password"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintVertical_bias="0.3" />
</androidx.constraintlayout.widget.ConstraintLayout>